# Dynasor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
benchmark/SC/: early_termination_bak.py  postprocessing_bak.py
benchmark/TokenDeprivation/: clients.py  post_process.ipynb  run.py  run.sh  utils.py
docs/: local.md
dynasor/: __init__.py  utils.py
dynasor/algorithms/: CoT.py  ReAct.py  Reasoning.py  SC.py  TSLLM.py  __init__.py
dynasor/cli/: chat.py  openai_server.py  serving_chat.py  serving_completion.py  sglang_adapter.py  sglang_server.py  utils.py  vllm_server.py
dynasor/clients/: __init__.py  openai.py
dynasor/core/: cot.py  entropy.py  evaluator.py
dynasor/datasets/: __init__.py  arc_agi.py  code.py  dataloader.py  math.py  simple.py  utils.py
dynasor/evaluate/: __init__.py  evaluator.py  math_evaluator.py
dynasor/server/: client.py  cot_client.py  cot_client_2.py  entropy.py  evaluator.py  serving_completion.py  vllm_server.py
examples/: client-vllm.py  client.py  cot.py  cot_client.py  gsm8k_utils.py  sc.py  sc_mod.py
server/: entropy.py  evaluator.py  vllm_serve.ipynb  vllm_server.py
tests/: test_cot.py
