[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynasor"
version = "0.0.1"
description = "Dynasor is a Python library for speedup LLM reasoning"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Dynasor Team" },
]
dependencies = [
  "openai",
  "rich",
  "prompt_toolkit",
  "pydantic",
  "datasets",
  "tqdm",
  "transformers",
  "latex2sympy2",
  "word2number",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
dynasor-vllm = "dynasor.cli.vllm_server:main"
dynasor = "dynasor.cli.vllm_server:main"
dynasor-openai = "dynasor.cli.openai_server:main"
dynasor-chat = "dynasor.cli.chat:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[project.urls]
Homepage = "https://github.com/hao-ai-lab/Dynasor"
Issues = "https://github.com/hao-ai-lab/Dynasor/issues"
