[metadata]
name = dynasor
version = 0.0.1
description = Dynasor is a Python library for speedup LLM reasoning
long_description = file: README.md
long_description_content_type = text/markdown
author = Dynasor Team
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    openai
    rich
    prompt_toolkit
    pydantic
    datasets
    tqdm
    latex2sympy2
    word2number

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    dynasor-vllm = dynasor.cli.vllm_server:main
    dynasor = dynasor.cli.vllm_server:main
    dynasor-openai = dynasor.cli.openai_server:main
    dynasor-chat = dynasor.cli.chat:main